# libclangmm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/: compile.sh  execute.sh  static_analysis.sh
cmake/Modules/: FindLibClang.cmake
cmake_modules/: FindLibClang.cmake
docs/: install.md
src/: CMakeLists.txt  CodeCompleteResults.cc  CodeCompleteResults.h  CompilationDatabase.cc  CompilationDatabase.h  CompileCommand.cc  CompileCommand.h  CompileCommands.cc  CompileCommands.h  CompletionString.cc  CompletionString.h  Cursor.cc  Cursor.h  Diagnostic.cc  Diagnostic.h  Index.cc  Index.h  SourceLocation.cc  SourceLocation.h  SourceRange.cc  SourceRange.h  Token.cc  Token.h  Tokens.cc  Tokens.h  TranslationUnit.cc  TranslationUnit.h  Utility.cc  Utility.h  clangmm.h  code_complete_results.cc  code_complete_results.h  compilation_database.cc  compilation_database.h  compile_command.cc  compile_commands.cc  compile_commands.h  completion_string.cc  completion_string.h  cursor.cc  (+15 more)
src/docs/: windows-install.md
tests/: CMakeLists.txt  CodeCompleteResults_H_Test.cc  CompletionString_H_Test.cc  Cursor_H_Test.cc  Diagnostics_Test.cc  Entry.cc  SourceLocation_H_Test.cc  Token_H_Test.cc  TranslationUnit_Test.cc  code_complete_results_test.cc  completion_string_test.cc  cursor_test.cc  diagnostics_test.cc  source_location_test.cc  token_test.cc  translation_unit_test.cc
tests/case/: main.cpp  main_error.cpp
